# enduro2d

./: .gitmodules  CMakeLists.txt
game/: CMakeLists.txt
game/sources/: game.cpp
headers/enduro2d/base/: _base.hpp  macros.hpp
headers/enduro2d/core/: _all.hpp  _core.hpp  engine.hpp  render.hpp  render.inl  render_queue.hpp
headers/enduro2d/high/: _all.hpp  _high.hpp  library.hpp  library.inl  node.hpp  prefab.hpp  sprite.hpp  sprite_9p.hpp  ui_color_style.hpp  ui_font_style.hpp  ui_image_style.hpp  world.hpp  world_ev.hpp
headers/enduro2d/math/: _all.hpp  _math.hpp  easing.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
headers/enduro2d/utils/: _all.hpp  buffer.hpp  color32.hpp  func_info.hpp
samples/: CMakeLists.txt
samples/sources/sample_00/: sample_00.cpp
samples/sources/sample_01/: sample_01.cpp
samples/sources/sample_02/: sample_02.cpp
samples/sources/sample_03/: sample_03.cpp
samples/sources/sample_04/: sample_04.cpp
samples/sources/sample_05/: sample_05.cpp
samples/sources/sample_06/: sample_06.cpp
samples/sources/sample_07/: sample_07.cpp
samples/sources/sample_08/: sample_08.cpp
samples/sources/sample_09/: sample_09.cpp
samples/sources/sample_10/: sample_10.cpp
sources/enduro2d/core/: dbgui.cpp  engine.cpp  render.cpp
sources/enduro2d/high/: node.cpp  prefab.cpp  sprite.cpp  sprite_9p.cpp  starter.cpp  world.cpp
sources/enduro2d/utils/: buffer.cpp  cbuffer_template.cpp  color32.cpp
untests/sources/untests_core/: render.cpp
untests/sources/untests_high/: library.cpp  node.cpp  screenspace_collider.cpp  ui_animation.cpp  (+1 more)
(+102 files in other folders)
